# minipock

./: .cruft.json  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yaml  package.xml  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yaml  ci.yaml  docker-test.yaml  docker.yaml  notion.yaml  notion.yml  ros-tag.yaml  ros2-build-test.yaml  ros2-tag.yaml  ros2_build.yml  update.yml
launch/: bringup.launch.py  spawn.launch.py
minipock/: CMakeLists.txt  minipocks.yaml  package.xml
minipock_bringup/: .cruft.json  .gitignore  README.md  package.xml  setup.py
minipock_bringup/launch/: bringup.launch.py
minipock_bringup/minipock_bringup/: odometry_transform_publisher.py  raw_data_transformer.py  setup.cfg
minipock_bringup/test/: test_odometry_transform_publisher.py
minipock_cartographer/: README.md  REAMDE.md
minipock_cartographer/config/: minipock_2d.lua
minipock_cartographer/launch/: cartographer.launch.py
minipock_cartographer/rviz/: cartographer.rviz
minipock_custom_msgs/: .cruft.json  CMakeLists.txt  README.md  package.xml
minipock_custom_msgs/srv/: GetChunk.srv  TrigUpdate.srv
minipock_description/: README.md  model.py  package.xml  setup.py
minipock_description/launch/: spawn.launch.py  spawn_multiple.launch.py
minipock_description/minipock_description/: config.py  model.py  model_v2.py
minipock_description/models/: core.stl  differential_base_pmma.stl  differential_top.dae  roller.stl  shaft.stl  side.stl  tire.stl  wheel_core.stl  wheel_rotative.dae
minipock_firmware_updater/: .cruft.json  README.md  package.xml  setup.cfg  setup.py
minipock_fleet_adapter/: .cruft.json  package.xml  setup.cfg  setup.py
minipock_gz/: .pre-commit-config.yaml  README.md  bridge.py  bridges.py  lidar_process.py  package.xml  setup.py
minipock_navigation/: CMakeLists.txt
minipock_navigation/minipock_cartographer/: CMakeLists.txt  README.md  package.xml
minipock_navigation/minipock_cartographer/config/: minipock_2d.lua
minipock_navigation/minipock_cartographer/launch/: cartographer.launch.py
minipock_navigation/minipock_cartographer/rviz/: cartographer.rviz
minipock_navigation/minipock_navigation/: package.xml
minipock_navigation2/: README.md  package.xml
minipock_teleop/: README.md  setup.cfg  setup.py
models/: differential_base_alu.dae  differential_base_alu.stl  differential_base_pla.stl  differential_base_pmma.stl
rviz/: minipock.rviz
urdf/: minipock.urdf.xacro  minipock_differential_base.xacro  motor_stepper.xacro  sensors.xacro
worlds/: minipock_world.sdf
(+75 files in other folders)
