<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>minipock_navigation</name>
  <description>Navigation 2 integration for Minipock</description>
  <maintainer email="s.delpeuch@catie.fr">Sébastien Delpeuch</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>minipock_cartographer</exec_depend>
  <exec_depend>minipock_navigation2</exec_depend>
  <exec_depend>minipock_teleop</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
